      - Redo log contention (Innodb_log_waits)
      - Long-running queries increase (Time > 10s)
    • Regression Summary section at top of comparison results
    • 🔴 Critical (red) and 🟡 Warning (yellow) severity levels
    • ✅ "No Regressions Detected" when metrics stable
    • Click "View Details" to jump to affected host tab
    • Pure function: detect_regressions() in compare.py

27. REGRESSION NOISE REDUCTION & ROOT-CAUSE HIERARCHY
    • Root-cause hierarchy: threads > locking > table_cache > buffer_pool > redo_log > temp_tables > processlist
    • Noise reduction rules:
      - Rule 1: Root cause suppression (thread_pressure suppresses processlist/temp_tables)
      - Rule 2: Low signal suppression (< 5% delta AND small absolute value)
      - Rule 3: Cold start suppression (uptime < 600s → skip buffer_pool/table_cache)
      - Rule 4: Single event downgrade (1 event → critical → warning)
      - Rule 5: Cross-host correlation (all hosts affected → downgrade severity)
    • Suppressed regressions preserved with reason
    • "Show suppressed issues" toggle in UI
    • Suppressed items shown in gray, smaller font, with explanation
    • Pure function: refine_regressions() in compare.py

28. HOSTS FILE OVERRIDE
    • Added MASC_HOSTS_FILE environment variable to override hosts.yaml path
    • Added MASC_RUNS_DIR environment variable to override runs directory
    • Startup log shows which hosts file is being used

29. PYPI PACKAGE PUBLISHING
    • Renamed project: MySQL Observer → MySQL Awesome Stats Collector (MASC)
    • Package name: mysql-awesome-stats-collector
    • CLI commands: `masc` (short) and `mysql-awesome-stats-collector` (full)
    • Added CLI entry points with --host, --port, --reload, --hosts-file, --version
    • Created docs/PUBLISHING.md with PyPI upload instructions
    • Updated pyproject.toml with full PyPI metadata
    • Created MANIFEST.in for including templates
    • Package ready for: pip install mysql-awesome-stats-collector
