@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2024 MySQL Observer Contributors
+Copyright (c) 2024 MySQL Awesome Stats Collector (MASC) Contributors
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
