@@ -1,2 +1,2 @@
-"""MySQL Observer - DevOps Diagnostic Tool"""
+"""MySQL Awesome Stats Collector (MASC) - DevOps Diagnostic Tool"""
 
