@@ -1,4 +1,4 @@
-# MySQL Hosts Configuration
+# MySQL Awesome Stats Collector (MASC) - Hosts Configuration
 # Copy this file to hosts.yaml and update with your actual hosts
 #
 # Each host requires:
